--- a/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/app.config
+++ b/Samples/V1.0Samples/LocalMediaSamples/PolicyRecordingBot/WorkerRole/app.config
@@ -18,14 +18,12 @@
         </listeners>
       </source>
     </sources>
-
     <!--Add for botframework traces-->
     <sharedListeners>
       <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
         <filter type="" />
       </add>
     </sharedListeners>
-
     <switches>
       <add name="logLevel" value="4" />
     </switches>
@@ -39,7 +37,6 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -76,12 +73,24 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
   <appSettings>
     <!-- update these with your Bot Id, AAD application id and your AAD application secret from your bot registration portal. -->
-    <add key="BotName" value="bot-recorder-app" />
+    <add key="BotName" value="bot-recorder-handle" />
     <add key="AadAppId" value="ffeade30-559e-49e4-b65c-62f835c7724e" />
-    <add key="AadAppSecret" value="hOj8Q~hNHJTT1WTqwS1A_tuEYq4U_LdDKoyV~bRQ" />
+    <add key="AadAppSecret" value="zJy8Q~JrYKpdhUZQQa0qweFwXb15WlXt5adLYb1L" />
     <add key="PlaceCallEndpointUrl" value="https://graph.microsoft.com/v1.0" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
